--- a/crystal-cluster-server/src/main/resources/application.yml
+++ b/crystal-cluster-server/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://111.230.152.81:3306/minedb?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://111.230.152.81:3316/minedb?useUnicode=true&characterEncoding=utf8&useSSL=false
     username: mineuser
     password: minepwd
     druid:
