--- a/crystal-cluster-server/pom.xml
+++ b/crystal-cluster-server/pom.xml
@@ -60,8 +60,8 @@
             <artifactId>thymeleaf-layout-dialect</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.ai.mine</groupId>
-            <artifactId>common-job</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
         </dependency>
 
         <!-- 这是一个Web应用 -->
