科达接口处理功能-4,报文处理问题修复

--- a/crystal-cluster-server/pom.xml
+++ b/crystal-cluster-server/pom.xml
@@ -63,6 +63,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-quartz</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
 
         <!-- 这是一个Web应用 -->
         <dependency>
